...
    header: String = "Color Word Challenge",
    body: List<String>? = listOf(
        "See words presented in different colors",
        "Indicate the color in which each word is printed as quickly as you can.",
    ),
    drawableId: Int? = R.drawable.ic_activity_color_word_challenge,
    buttonText: String? = "Begin",
    textType: TextType = TextType.NUMBER,
) :
    SimpleViewActivityModel(
        id, title, header, body, drawableId, buttonText, textType,
    )

