...

    @Composable
    fun ofBasic(): @Composable ((email: String, password: String) -> Unit) -> Unit =
        { onClick -> BasicSignUpComponent(onClick) }
}

internal const val EMAIL_TEST_TAG = "emailTestTag"
internal const val PASSWORD_TEST_TAG = "passwordTag"
internal const val SIGNUP_BUTTON_TEST_TAG = "signupButtonTag"

@Composable
fun BasicSignUpComponent(onClick: (email: String, password: String) -> Unit) {
    val emailState = remember { mutableStateOf("") }
    val passwordState = remember { mutableStateOf("") }
...
